--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="screen">
             <div class="nav">
                 <div class="nav-item">
-                    <a class="nav-item-link" href="https://www.linkedin.com/in/nils-p-4b8136207/" target="_blank">
+                    <a class="nav-item-link" href="mailto:nils.patriksson@outlook.com" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
                             <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
                         </svg>
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">Skicka ett mejl</div>
+                        <div class="nav-item-desc-text">Send me an e-mail</div>
                     </div>
                 </div>
                 <div class="nav-item">
