--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">LinkedIn</div>
+                        <div class="nav-item-desc-text">About Nils</div>
                     </div>
                 </div>
                 <div class="nav-item">
