--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">About Nils</div>
+                        <div class="nav-item-desc-text">LinkedIn</div>
                     </div>
                 </div>
                 <div class="nav-item">
-                    <a class="nav-item-link" href="https://nilspatriksson.se/me" target="_blank">
+                    <a class="nav-item-link" href="https://nilspatriksson.se/me.html" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-me" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M10.5 5a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm.061 3.073a4 4 0 10-5.123 0 6.004 6.004 0 00-3.431 5.142.75.75 0 001.498.07 4.5 4.5 0 018.99 0 .75.75 0 101.498-.07 6.005 6.005 0 00-3.432-5.142z"></path>
                             </svg>
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">LinkedIn</div>
+                        <div class="nav-item-desc-text">About me</div>
                     </div>
                 </div>
                 
