--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="content">
                 <div class="title">Nils Patriksson</div>
-                <div class="subtitle">A driven and curious M.Sc. student at Wireless, Photonics and Space engineering at Chalmers University of technology. Always looking for new challenges and opportunities to apply problem-solving skills. 
+                <div class="subtitle">A driven and curious M.Sc. student in Wireless, Photonics and Space engineering at Chalmers. Always looking for new challenges and opportunities to solve new problems. 
                 </div>
             </div>
         </div>
