--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
                         <div class="nav-item-desc-text">About me</div>
                     </div>
                 </div>
+                <div class="nav-item">
+                    <a class="nav-item-link" href="https://www.nilspatriksson.se/albums" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-me" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.75 2.5a.25.25 0 00-.25.25v10.5c0 .138.112.25.25.25h.94a.76.76 0 01.03-.03l6.077-6.078a1.75 1.75 0 012.412-.06L14.5 10.31V2.75a.25.25 0 00-.25-.25H1.75zm12.5 11H4.81l5.048-5.047a.25.25 0 01.344-.009l4.298 3.889v.917a.25.25 0 01-.25.25zm1.75-.25V2.75A1.75 1.75 0 0014.25 1H1.75A1.75 1.75 0 000 2.75v10.5C0 14.216.784 15 1.75 15h12.5A1.75 1.75 0 0016 13.25zM5.5 6a.5.5 0 11-1 0 .5.5 0 011 0zM7 6a2 2 0 11-4 0 2 2 0 014 0z"></path>
+                            </svg>
+                    </a>
+                    <div class="nav-item-desc">
+                        <div class="nav-item-desc-triangle"></div>
+                        <div class="nav-item-desc-text">About me</div>
+                    </div>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-item-link" href="https://www.nilspatriksson.se/works" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-me" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M0 1.75A.75.75 0 01.75 1h4.253c1.227 0 2.317.59 3 1.501A3.744 3.744 0 0111.006 1h4.245a.75.75 0 01.75.75v10.5a.75.75 0 01-.75.75h-4.507a2.25 2.25 0 00-1.591.659l-.622.621a.75.75 0 01-1.06 0l-.622-.621A2.25 2.25 0 005.258 13H.75a.75.75 0 01-.75-.75V1.75zm8.755 3a2.25 2.25 0 012.25-2.25H14.5v9h-3.757c-.71 0-1.4.201-1.992.572l.004-7.322zm-1.504 7.324l.004-5.073-.002-2.253A2.25 2.25 0 005.003 2.5H1.5v9h3.757a3.75 3.75 0 011.994.574z"></path>
+                            </svg>
+                    </a>
+                    <div class="nav-item-desc">
+                        <div class="nav-item-desc-triangle"></div>
+                        <div class="nav-item-desc-text">About me</div>
+                    </div>
+                </div>
                 
             </div>
             <div class="content">
