--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">About me</div>
+                        <div class="nav-item-desc-text">Albums</div>
                     </div>
                 </div>
                 <div class="nav-item">
@@ -61,7 +61,7 @@
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">About me</div>
+                        <div class="nav-item-desc-text">Reports and works</div>
                     </div>
                 </div>
                 
