--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
     </head>
     <body>
             <div class="content">
-                <div class="title">Nils Patriksson</div>
-                <div class="subtitle">A driven and curious M.Sc. student in Wireless, Photonics and Space engineering at Chalmers. Always looking for new challenges and opportunities to solve new problems. 
+                <div class="title">Error 404, page not found</div>
+                <div class="subtitle">The page doesn't exist. 
                 </div>
             </div>
         </div>
