--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8">
-        <title>Nils Patriksson</title>
+        <title>Page not found</title>
         <link rel="stylesheet" href="stylesheet.css?v=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Castoro&family=Lato&family=Texturina:wght@200&family=Open+Sans&display=swap" rel="stylesheet">
