--- a/albums/index.html
+++ b/albums/index.html
@@ -17,7 +17,7 @@
                     </a>
                     <div class="nav-item-desc">
                         <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">Send me an e-mail</div>
+                        <div class="nav-item-desc-text">Back to startpage</div>
                     </div>
                 </div>
                 <div class="nav-item">
