--- a/albums/index.html
+++ b/albums/index.html
@@ -78,9 +78,23 @@
                 
             </div>
             <div class="content">
-                <div class="title">Nils Patriksson</div>
-                <div class="subtitle">A driven and curious M.Sc. student in Wireless, Photonics and Space engineering at Chalmers. Always looking for new challenges and opportunities to solve new problems. 
+                <div class="title">Nils albums</div>
+                <div class="subtitle">
+                Here follows some albums.
                 </div>
+                <div class="gallery" align="center">
+                <div class="thumbnails">
+                    <img onmouseover="preview.src=img1.src" name="img1" src="images/img1.jpg" alt="" />
+                    <img onmouseover="preview.src=img2.src" name="img2" src="images/img2.jpg" alt="" />
+                    <img onmouseover="preview.src=img3.src" name="img3" src="images/img3.jpg" alt="" />
+                    <img onmouseover="preview.src=img4.src" name="img4" src="images/img4.jpg" alt="" />
+                    <img onmouseover="preview.src=img5.src" name="img5" src="images/img5.jpg" alt="" />
+                </div>
+                <div class="preview" align="center">
+                    <img name="preview" src="images/img1.jpg" alt=""/>
+                </div>
+                </div> <!-- Close the gallery div -->
+                
             </div>
         </div>
     </body>
