--- a/albums/index.html
+++ b/albums/index.html
@@ -10,7 +10,7 @@
         <div class="screen">
           <div class="nav">
                 <div class="nav-item">
-                    <a class="nav-item-link" href="www.nilspatriksson.se" target="_blank">
+                    <a class="nav-item-link" href="../" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z"></path>
                           </svg>
@@ -19,63 +19,7 @@
                         <div class="nav-item-desc-triangle"></div>
                         <div class="nav-item-desc-text">Back to startpage</div>
                     </div>
-                </div>
-                <div class="nav-item">
-                    <a class="nav-item-link" href="mailto:nils.patriksson@outlook.com" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-                        </svg>
-                    </a>
-                    <div class="nav-item-desc">
-                        <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">Send me an e-mail</div>
-                    </div>
-                </div>
-                <div class="nav-item">
-                    <a class="nav-item-link" href="https://www.linkedin.com/in/nilspatriksson" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-linkedin" viewBox="0 0 16 16">
-                            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                        </svg>
-                    </a>
-                    <div class="nav-item-desc">
-                        <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">LinkedIn</div>
-                    </div>
-                </div>
-                <div class="nav-item">
-                    <a class="nav-item-link" href="https://www.nilspatriksson.se/me" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-me" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M10.5 5a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm.061 3.073a4 4 0 10-5.123 0 6.004 6.004 0 00-3.431 5.142.75.75 0 001.498.07 4.5 4.5 0 018.99 0 .75.75 0 101.498-.07 6.005 6.005 0 00-3.432-5.142z"></path>
-                            </svg>
-                    </a>
-                    <div class="nav-item-desc">
-                        <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">About me</div>
-                    </div>
-                </div>
-                <div class="nav-item">
-                    <a class="nav-item-link" href="https://www.nilspatriksson.se/albums" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-me" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M1.75 2.5a.25.25 0 00-.25.25v10.5c0 .138.112.25.25.25h.94a.76.76 0 01.03-.03l6.077-6.078a1.75 1.75 0 012.412-.06L14.5 10.31V2.75a.25.25 0 00-.25-.25H1.75zm12.5 11H4.81l5.048-5.047a.25.25 0 01.344-.009l4.298 3.889v.917a.25.25 0 01-.25.25zm1.75-.25V2.75A1.75 1.75 0 0014.25 1H1.75A1.75 1.75 0 000 2.75v10.5C0 14.216.784 15 1.75 15h12.5A1.75 1.75 0 0016 13.25zM5.5 6a.5.5 0 11-1 0 .5.5 0 011 0zM7 6a2 2 0 11-4 0 2 2 0 014 0z"></path>
-                            </svg>
-                    </a>
-                    <div class="nav-item-desc">
-                        <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">Albums</div>
-                    </div>
-                </div>
-                <div class="nav-item">
-                    <a class="nav-item-link" href="https://www.nilspatriksson.se/works" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-me" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M0 1.75A.75.75 0 01.75 1h4.253c1.227 0 2.317.59 3 1.501A3.744 3.744 0 0111.006 1h4.245a.75.75 0 01.75.75v10.5a.75.75 0 01-.75.75h-4.507a2.25 2.25 0 00-1.591.659l-.622.621a.75.75 0 01-1.06 0l-.622-.621A2.25 2.25 0 005.258 13H.75a.75.75 0 01-.75-.75V1.75zm8.755 3a2.25 2.25 0 012.25-2.25H14.5v9h-3.757c-.71 0-1.4.201-1.992.572l.004-7.322zm-1.504 7.324l.004-5.073-.002-2.253A2.25 2.25 0 005.003 2.5H1.5v9h3.757a3.75 3.75 0 011.994.574z"></path>
-                            </svg>
-                    </a>
-                    <div class="nav-item-desc">
-                        <div class="nav-item-desc-triangle"></div>
-                        <div class="nav-item-desc-text">Reports and works</div>
-                    </div>
-                </div>
-                
+                </div>                
             </div>
             <div class="content">
                 <div class="title">Nils albums</div>
