--- a/works/index.html
+++ b/works/index.html
@@ -1,1 +1,32 @@
-
+<html lang="sv">
+    <head>
+        <meta charset="utf-8">
+        <title>Nils albums</title>
+        <link rel="stylesheet" href="../stylesheet.css?v=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Castoro&family=Lato&family=Texturina:wght@200&family=Open+Sans&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="screen">
+          <div class="nav">
+                <div class="nav-item">
+                    <a class="nav-item-link" href="../" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z"></path>
+                          </svg>
+                    </a>
+                    <div class="nav-item-desc">
+                        <div class="nav-item-desc-triangle"></div>
+                        <div class="nav-item-desc-text">Back to startpage</div>
+                    </div>
+                </div>                
+            </div>
+            <div class="content">
+                <div class="title">Nils albums</div>
+                <div class="subtitle">
+                Here follows some albums.
+                </div>                
+            </div>
+        </div>
+    </body>
+</html>
