--- a/albums/index.html
+++ b/albums/index.html
@@ -48,29 +48,29 @@
             <div class="content">
 
                 <div class="gallery">
-                  <a target="_blank" href="img_5terre.jpg">
-                    <img src="img1.jpg" alt="Cinque Terre" width="600" height="400">
+                  <a target="_blank" href="img1.jpg">
+                    <img src="img1.jpg" alt="" width="600" height="400">
+                  </a>
+                  <div class="desc"> </div>
+                </div>
+
+                <div class="gallery">
+                  <a target="_blank" href="img2.jpg">
+                    <img src="img2.jpg" alt="" width="600" height="400">
                   </a>
                   <div class="desc">Add a description of the image here</div>
                 </div>
 
                 <div class="gallery">
-                  <a target="_blank" href="img_forest.jpg">
-                    <img src="img2.jpg" alt="Forest" width="600" height="400">
+                  <a target="_blank" href="img3.jpg">
+                    <img src="img3.jpg" alt="" width="600" height="400">
                   </a>
                   <div class="desc">Add a description of the image here</div>
                 </div>
 
                 <div class="gallery">
-                  <a target="_blank" href="img_lights.jpg">
-                    <img src="img3.jpg" alt="Northern Lights" width="600" height="400">
-                  </a>
-                  <div class="desc">Add a description of the image here</div>
-                </div>
-
-                <div class="gallery">
-                  <a target="_blank" href="img_mountains.jpg">
-                    <img src="img4.jpg" alt="Mountains" width="600" height="400">
+                  <a target="_blank" href="img4.jpg">
+                    <img src="img4.jpg" alt="" width="600" height="400">
                   </a>
                   <div class="desc">Add a description of the image here</div>
                 </div>
