--- a/albums/index.html
+++ b/albums/index.html
@@ -51,28 +51,7 @@
                   <a target="_blank" href="img1.jpg">
                     <img src="img1.jpg" alt="" width="600" height="400">
                   </a>
-                  <div class="desc"> </div>
-                </div>
-
-                <div class="gallery">
-                  <a target="_blank" href="img2.jpg">
-                    <img src="img2.jpg" alt="" width="600" height="400">
-                  </a>
-                  <div class="desc">Add a description of the image here</div>
-                </div>
-
-                <div class="gallery">
-                  <a target="_blank" href="img3.jpg">
-                    <img src="img3.jpg" alt="" width="600" height="400">
-                  </a>
-                  <div class="desc">Add a description of the image here</div>
-                </div>
-
-                <div class="gallery">
-                  <a target="_blank" href="img4.jpg">
-                    <img src="img4.jpg" alt="" width="600" height="400">
-                  </a>
-                  <div class="desc">Add a description of the image here</div>
+                  <div class="desc">Picture taking during a short hike at Halleberg near Vänersborg. This picture is from a early morning walk around the lake Hallsjön.  </div>
                 </div>
                 
             </div>
