--- a/albums/index.html
+++ b/albums/index.html
@@ -34,7 +34,7 @@
         <div class="screen">
           <div class="nav">
                 <div class="nav-item">
-                    <a class="nav-item-link" href="../" target="_blank">
+                    <a class="nav-item-link" href="../" target="_self">
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z"></path>
                           </svg>
