--- a/works/index.html
+++ b/works/index.html
@@ -22,10 +22,8 @@
                 </div>                
             </div>
             <div class="content">
-                <div class="title">Nils albums</div>
-                <div class="subtitle">
-                Here follows some albums.
-                </div>                
+                <div class="title">Some of my works</div>
+                Here I write some text...            
             </div>
         </div>
     </body>
