--- a/works/index.html
+++ b/works/index.html
@@ -1,7 +1,7 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8">
-        <title>Nils albums</title>
+        <title>Nils works</title>
         <link rel="stylesheet" href="../stylesheet.css?v=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Castoro&family=Lato&family=Texturina:wght@200&family=Open+Sans&display=swap" rel="stylesheet">
@@ -23,7 +23,8 @@
             </div>
             <div class="content">
                 <div class="title">Some of my works</div>
-                Here I write some text...            
+                <embed src="formulas.pdf" width="500" height="375" 
+                    type="application/pdf">
             </div>
         </div>
     </body>
