--- a/works/index.html
+++ b/works/index.html
@@ -25,6 +25,8 @@
                 <div class="title">Some of my works</div>
                 <embed src="formulas.pdf" width="500" height="375" 
                     type="application/pdf">
+                
+                <img src="ex.pdf" alt="" width="600" height="400">
             </div>
         </div>
     </body>
