--- a/index.html
+++ b/index.html
@@ -64,7 +64,27 @@
                         <div class="nav-item-desc-text">Reports and works</div>
                     </div>
                 </div>
-            </div>
+				<div class="nav-item">
+                    <a class="nav-item-link" href="https://www.nilspatriksson.se/climbing" target="_self">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 0 24 24" width="48px" fill="#FFFFFF"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M14 6l-4.22 5.63 1.25 1.67L14 9.33 19 16h-8.46l-4.01-5.37L1 18h22L14 6zM5 16l1.52-2.03L8.04 16H5z"/>
+						</svg>
+                    </a>
+                    <div class="nav-item-desc">
+                        <div class="nav-item-desc-triangle"></div>
+                        <div class="nav-item-desc-text">Climbing</div>
+                    </div>
+                </div>
+				<div class="nav-item">
+                    <a class="nav-item-link" href="https://www.nilspatriksson.se/projects" target="_self">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="#FFFFFF"><path fill-rule="evenodd" d="M7.875 2.292a.125.125 0 00-.032.018A7.24 7.24 0 004.75 8.25a7.247 7.247 0 003.654 6.297c.57.327.982.955.941 1.682v.002l-.317 6.058a.75.75 0 11-1.498-.078l.317-6.062v-.004c.006-.09-.047-.215-.188-.296A8.747 8.747 0 013.25 8.25a8.74 8.74 0 013.732-7.169 1.547 1.547 0 011.709-.064c.484.292.809.835.809 1.46v4.714a.25.25 0 00.119.213l2.25 1.385c.08.05.182.05.262 0l2.25-1.385a.25.25 0 00.119-.213V2.478c0-.626.325-1.169.81-1.461a1.547 1.547 0 011.708.064 8.74 8.74 0 013.732 7.17 8.747 8.747 0 01-4.41 7.598c-.14.081-.193.206-.188.296v.004l.318 6.062a.75.75 0 11-1.498.078l-.317-6.058v-.002c-.041-.727.37-1.355.94-1.682A7.247 7.247 0 0019.25 8.25a7.24 7.24 0 00-3.093-5.94.125.125 0 00-.032-.018l-.01-.001c-.003 0-.014 0-.031.01-.036.022-.084.079-.084.177V7.19a1.75 1.75 0 01-.833 1.49l-2.25 1.385a1.75 1.75 0 01-1.834 0l-2.25-1.384A1.75 1.75 0 018 7.192V2.477c0-.098-.048-.155-.084-.176a.062.062 0 00-.031-.011l-.01.001z"></path>
+						</svg>
+                    </a>
+                    <div class="nav-item-desc">
+                        <div class="nav-item-desc-triangle"></div>
+                        <div class="nav-item-desc-text">Projects</div>
+                    </div>
+                </div>
+				</div>
             <div class="content">
                 <div class="title">Nils Patriksson</div>
                 <div class="subtitle">A driven and curious M.Sc. student in Wireless, Photonics and Space engineering at Chalmers. Always looking for new challenges and opportunities to solve new problems. 
