--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 				</div>
             <div class="content">
                 <div class="title">Nils Patriksson</div>
-                <div class="subtitle">A driven and curious M.Sc. student in Wireless, Photonics and Space engineering at Chalmers. Always looking for new challenges and opportunities to solve new problems. 
+                <div class="subtitle">
+				Welcome to my webpage! 
                 </div>
             </div>
         </div>
