--- a/albums/index.html
+++ b/albums/index.html
@@ -51,14 +51,6 @@
    </div>
    <div class="content">
     <div class="gallery">
-     <a href="img1.jpg" target="_blank">
-      <img alt="" height="400" src="img1.jpg" width="600"/>
-     </a>
-     <div class="desc">
-      Picture taking during early morning walk around Hallsjön outside Vargön.
-     </div>
-    </div>
-    <div class="gallery">
      <a href="img2.jpg" target="_blank">
       <img alt="" height="400" src="img2.jpg" width="600"/>
      </a>
@@ -72,6 +64,54 @@
      </a>
      <div class="desc">
       Skating at sea on Swedish west-coast, salt-watery ice!
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="img1.jpg" target="_blank">
+      <img alt="" height="400" src="img1.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Picture taken during short hike around Hallsjön near Trollhättan.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20210928_190047.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20210928_190047.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Slow sailing with some fika.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20220405_161323.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20220405_161323.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Mount blanc looks smaller from a distance, however it's over 1000 meters above where the picture is taken from.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20211201_233035.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20211201_233035.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      It does not only rain in Gothenburg.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20220414_105738.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20220414_105738.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Svante needs more petting, most probably.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20210926_151827_004.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20210926_151827_004.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Sailing makes you feel light.
      </div>
     </div>
    </div>
