--- a/albums/index.html
+++ b/albums/index.html
@@ -114,6 +114,76 @@
       Sailing makes you feel light.
      </div>
     </div>
+    <div class="gallery">
+     <a href="IMG_20201030_114918.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20201030_114918.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Cat Mimmi chilling out.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20201101_114019.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20201101_114019.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Svante chilling by the catnip.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20200711_163030.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20200711_163030.jpg" width="600"/>
+     </a>
+     <div class="desc">
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20201224_142300.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20201224_142300.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Frosty spring-flower.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20200712_172455.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20200712_172455.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Spinnaker sailing with the Granada 27.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20200802_131731.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20200802_131731.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Maxi sailing from Vinga.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20200721_132817.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20200721_132817.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      Smooth paddling on Svartälven.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20200606_113617.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20200606_113617.jpg" width="600"/>
+     </a>
+     <div class="desc">
+      After the rain comes the sun for these wet flowers.
+     </div>
+    </div>
+    <div class="gallery">
+     <a href="IMG_20200606_111937.jpg" target="_blank">
+      <img alt="" height="400" src="IMG_20200606_111937.jpg" width="600"/>
+     </a>
+     <div class="desc">
+     </div>
+    </div>
    </div>
   </div>
  </body>
