--- a/me/index.html
+++ b/me/index.html
@@ -1,49 +1,229 @@
-<html lang="sv">
- <head>
-  <meta charset="utf-8"/>
-  <title>
-   Nils albums
-  </title>
-  <link href="../stylesheet.css?v=1.0" rel="stylesheet"/>
-  <link href="https://fonts.gstatic.com" rel="preconnect"/>
-  <link href="https://fonts.googleapis.com/css2?family=Castoro&amp;family=Lato&amp;family=Texturina:wght@200&amp;family=Open+Sans&amp;display=swap" rel="stylesheet"/>
- </head>
- <body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+<head>
+
+	<title>Jonathan Doe | Web Designer, Director | name@yourdomain.com</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+
+  	<link rel="preconnect" href="https://fonts.gstatic.com"/>
+  	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Castoro&amp;family=Lato&amp;family=Texturina:wght@200&amp;family=Open+Sans&amp;display=swap"/>
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
+	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+
+</head>
+<body>
   <div class="screen">
-   <div class="nav">
-    <div class="nav-item">
-     <a class="nav-item-link" href="../" target="_self">
-      <svg class="bi bi-envelope-fill" fill="white" height="40" viewbox="0 0 16 16" width="40" xmlns="http://www.w3.org/2000/svg">
-       <path d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z" fill-rule="evenodd">
-       </path>
-      </svg>
-     </a>
-     <div class="nav-item-desc">
-      <div class="nav-item-desc-triangle">
-      </div>
-      <div class="nav-item-desc-text">
-       Back to startpage
-      </div>
-     </div>
-    </div>
-   </div>
-   <div class="content">
-    <div class="base">
-          <div class="profile">
-      <div class="photo">
-        <!--<img src="" /> -->
-      </div>
-      <div class="info">
-        <h1 class="name">Nils Patriksson</h1>
-      </div>
-    </div>
-    <div class="about">
-      <h3>About Me</h3>
-    </div>
-    </div>
+	  <div class="nav">
+		  <div class="nav-item">
+			  <a class="nav-item-link" href="../" target="_self">
+				  <svg class="bi bi-envelope-fill" fill="white" height="40" viewbox="0 0 16 16" width="40" xmlns="http://www.w3.org/2000/svg">
+					  <path d="M7.78 12.53a.75.75 0 01-1.06 0L2.47 8.28a.75.75 0 010-1.06l4.25-4.25a.75.75 0 011.06 1.06L4.81 7h7.44a.75.75 0 010 1.5H4.81l2.97 2.97a.75.75 0 010 1.06z" fill-rule="evenodd">
+					  </path>
+				  </svg>
+			  </a>
+			  <div class="nav-item-desc">
+				  <div class="nav-item-desc-triangle">
+
+				  </div>
+				  <div class="nav-item-desc-text">
+					  Back to startpage
+				  </div>
+			  </div>
+		  </div>
+	  </div>
+	  <div class="content">
+		  <div id="doc2" class="yui-t7">
+			<div id="inner">
+				<div id="hd">
+					<div class="yui-gc">
+						<div class="yui-u first">
+							<h1>Nils Patriksson</h1>
+							<h2>Microwave engineering student</h2>
+						</div>
+
+						<div class="yui-u">
+							<div class="contact-info">
+								<h3><a id="pdf" href="#">Download PDF CV</a></h3>
+								<h3><a href="mailto:nils.patriksson@outlook.com">nils.patriksson@outlook.com</a></h3>
+								<h3>070 - 312 11 86</h3>
+							</div><!--// .contact-info -->
+						</div>
+					</div><!--// .yui-gc -->
+				</div><!--// hd -->
+				<div id="bd">
+					<div id="yui-main">
+						<div class="yui-b">
+							<div class="yui-gf">
+								<div class="yui-u first">
+									<h2>About me</h2>
+								</div>
+								<div class="yui-u">
+									<p class="enlarge">
+										About me
+									</p>
+								</div>
+							</div>
+							<div class="yui-gf">
+								<div class="yui-u first">
+									<h2>Interests</h2>
+								</div>
+								<div class="yui-u">
+									<div class="circular_image">
+									  <img src="climb.jpg"/>
+									</div>
+									<div class="circular_image">
+									  <img src="sail2.jpg"/>
+									</div>
+									<div class="circular_image">
+									  <img src="walk.jpeg"/>
+									</div>
+									<div class="circular_image">
+									  <img src="culture.jpg"/>
+									</div>
+								</div>
+							</div>
+							<div class="yui-gf">
+								<div class="yui-u first">
+									<h2>Education</h2>
+								</div>
+								<div class="yui-u">
+									<div class="job">
+										<h2>Chalmers University of Technology</h2>
+										<h3>M.Sc. Wireless, Photonics and Space engineering (120 hp)</h3>
+										<h4>2021-</h4>
+										<p>Ongoing till 2023, courses in microwave engineering, antenna design and superconducting circuits. </p>
+									</div>
+									<div class="job">
+										<h2>Chalmers University of Technology</h2>
+										<h3>B.Sc. Engineering Physics (180 hp)</h3>
+										<h4>2017-2020</h4>
+										<p>Contains mathematics, classical physics, electromagnetic theory, thermodynamics, mechanics and photonics. Also programming, control systems, quantum mechanics and subatomic physics. </p>
+									</div>
+									<div class="job">
+										<h2>University of Gothenburg</h2>
+										<h3>Business economics, course package</h3>
+										<h4>2020 (autumn)</h4>
+										<p>Course package of 22.5 credits (hp) containing organization theory, leadership, marketing and financial management. </p>
+									</div>
+									<div class="job last">
+										<h2>Västerhöjdsgymnasiet</h2>
+										<h3>High school program in engineering</h3>
+										<h4>2013-2016</h4>
+										<p>Credit points of 22.3. </p>
+									</div>
+								</div>
+							</div>
+							<!--// .yui-gf -->
+							<div class="yui-gf">
+								<div class="yui-u first">
+									<h2>Work experience</h2>
+								</div><!--// .yui-u -->
+								<div class="yui-u">
+									<div class="job">
+										<h2>Intize</h2>
+										<h3>Operations manager</h3>
+										<h4>2020-2021</h4>
+										<p>Supervised about 60 mentors to inspire and mentor younger students. </p>
+									</div>
+									<div class="job">
+										<h2>Chalmers University of Technology</h2>
+										<h3>Amuensis position</h3>
+										<h4>2020</h4>
+										<p>Continuation of bachelors thesis about microwave treatment of brain cancer. </p>
+									</div>
+									<div class="job">
+										<h2>NCC Industry (Asphalt) - Gothenburg and Mariestad</h2>
+										<h3>Assistant supervisor</h3>
+										<h4>2017-2019 (springs/summers)</h4>
+										<p>Planning, conducting measurements and invoice handling. </p>
+									</div>
+									<div class="job last">
+										<h2>Mariestads sailing club</h2>
+										<h3>Sailing school instructor and head</h3>
+										<h4>summers 2017-2018</h4>
+										<p>Sailing school instructor and head for children and adults. </p>
+									</div>
+								</div><!--// .yui-u -->
+							</div>
+							<div class="yui-gf">
+								<div class="yui-u first">
+									<h2>Other experience and volunteering</h2>
+								</div><!--// .yui-u -->
+								<div class="yui-u">
+									<div class="job">
+										<h2>The Physics Division (Student Union)</h2>
+										<h3>"Non-profesional" accountant</h3>
+										<h4>2019-2020</h4>
+										<p>Inspected financial accounts of student union. </p>
+									</div>
+									<div class="job">
+										<h2>Intize</h2>
+										<h3>Mentor in mathematics</h3>
+										<h4>2019-2020</h4>
+										<p>Mentoring a small group of high school students every week. </p>
+									</div>
+									<div class="job">
+										<h2>FARM (Student Union Comittee)</h2>
+										<h3>Treasurer</h3>
+										<h4>2018</h4>
+									</div>
+									<div class="job last">
+										<h2>Timmersdala scout corps</h2>
+										<h3>Scout leader</h3>
+										<h4>2015-2017</h4>
+										<p>Leader for kids of ages 7 to 15. </p>
+									</div>
+								</div><!--// .yui-u -->
+							</div>
+							<!--// .yui-gf -->
+							<div class="yui-gf">
+								<div class="yui-u first">
+									<h2>Technical</h2>
+								</div>
+								<div class="yui-u">
+									<ul class="talent">
+										<li>CST MW Studio</li>
+										<li>MATLAB</li>
+										<li class="last">Python</li>
+									</ul>
+
+									<ul class="talent">
+										<li>Java</li>
+										<li>LabVIEW</li>
+										<li class="last">Autodesk Inventor</li>
+									</ul>
+
+									<ul class="talent">
+										<li>Microsoft office</li>
+										<li>.</li>
+										<li class="last">.</li>
+									</ul>
+								</div>
+							</div>
+							<div class="yui-gf last">
+								<div class="yui-u first">
+									<h2>Other licences and education</h2>
+								</div>
+								<div class="yui-u">
+									<ul class="talent">
+										<li>Drivers licence B (Sweden)</li>
+										<li class="last">Forklift licence, type A, B (Sweden)</li>
+									</ul>
+								</div>
+							</div>
+							<!--// .yui-gf-->
+						</div><!--// .yui-b -->
+					</div><!--// yui-main -->
+				</div><!--// bd -->
+				<div id="ft">
+				</div><!--// footer -->
+			</div><!-- // inner -->
+		</div><!--// doc -->
+	  </div>
   </div>
-    </div>
-   </div>
-  </div>
- </body>
+</body>
 </html>
+
